doc/Parsers/JavaCC/PrologGrammar.java
/* Generated By:JavaCC: Do not edit this line. PrologGrammar.java */
   /**
    * This class represents Prolog parser. It consists of three methods
    * ConvertRules() and SyntaxCheck() to be used for converting Prolog
    * programs to PeerTrust and automatically generated methods for parsing.
    *
    * @author Bogdan Vlasenko
    */


import java.util.Vector;

public class PrologGrammar implements PrologGrammarConstants {
    public static Vector tokens = new Vector(0, 1);

   /**
    * Converts Prolog program saved to a file to Peer Trust syntax and saves
    * result to another file. Throws IOException or FileNotFoundException
    * if load / save operations were unsuccessful or ParseException if
    * syntax of input was wrong.
    *
    * @param  inputPath path to input file
    *         outputPath path to output file
    */

    public static void ConvertRules( String inputPath, String outputPath)
    throws ParseException, java.io.FileNotFoundException, java.io.IOException
    {
        System.out.println("Getting rules from " + inputPath );
        java.io.FileInputStream inStream = new java.io.FileInputStream( inputPath );
        java.io.FileWriter outFile = new java.io.FileWriter( outputPath, false );
        tokens = new Vector(0, 1);
        PrologGrammar parser = new PrologGrammar( inStream );
        parser.Input();
        Vector convertedRules = PrologSemanticAnalyzer.analyze(tokens);
        for( int i = 0; i < convertedRules.capacity(); i++ )
        {
            String str = ((String) convertedRules.elementAt(i)) + "\n";
            outFile.write(str, 0, str.length());
        }
        inStream.close();
        outFile.close();
        System.out.println("Syntax looks to be ok, converted rules saved to " + outputPath);
    }

   /**
    * Check syntax of given Prolog rule. Throws ParseException if syntax
    * of input was wrong. This method is used for rules without policy.
    *
    * @param  stringToCheck Prolog rule to be checked
    *
    * @return Vector with one string which is translation of given 
    * Prolog rule to Peer Trust
    */

    public static Vector SyntaxCheck( String stringToCheck )
    throws ParseException, java.io.FileNotFoundException, java.io.IOException
    {
        return( SyntaxCheck( stringToCheck, "" ) );
    }

   /**
    * Check syntax of given Prolog rules. Throws ParseException if syntax
    * of input was wrong. This method is used for rules with policy.
    *
    * @param  stringToCheck Prolog rule to be checked
    *         policyString policy of Prolog rule to be checked
    *
    * @return Vector with one string which is translation of given 
    * Prolog rules to Peer Trust
    */

    public static Vector SyntaxCheck( String stringToCheck, String policyString )
    throws ParseException, java.io.FileNotFoundException, java.io.IOException
    {
        String str = stringToCheck + policyString;
        java.io.StringBufferInputStream inStream = new java.io.StringBufferInputStream( str );
        tokens = new Vector(0, 1);
        PrologGrammar parser = new PrologGrammar( inStream );
        parser.Input();

        Vector convertedRules = PrologSemanticAnalyzer.analyze(tokens);

        return( convertedRules );
    }

  final public void Input() throws ParseException {
    label_1:
    while (true) {
      Rule();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 5:
      case 10:
      case 12:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
  }

  final public void Rule() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 5:
      SimpleRule();
      break;
    case 10:
      SignedRule();
      break;
    case 12:
      PolicyRule();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SimpleRule() throws ParseException {
    jj_consume_token(5);
    jj_consume_token(6);
    Head();
    jj_consume_token(7);
    Guards();
    jj_consume_token(7);
    Body();
    jj_consume_token(8);
    jj_consume_token(9);
  }

  final public void SignedRule() throws ParseException {
    jj_consume_token(10);
    jj_consume_token(6);
    jj_consume_token(5);
    jj_consume_token(6);
    Head();
    jj_consume_token(7);
    Guards();
    jj_consume_token(7);
    Body();
    jj_consume_token(8);
    jj_consume_token(7);
    String();
    jj_consume_token(7);
    jj_consume_token(11);
    jj_consume_token(6);
    String();
    jj_consume_token(8);
    jj_consume_token(8);
    jj_consume_token(9);
  }

  final public void PolicyRule() throws ParseException {
    jj_consume_token(12);
    jj_consume_token(6);
    Head();
    jj_consume_token(7);
    Body();
    jj_consume_token(8);
    jj_consume_token(9);
  }

  final public void Head() throws ParseException {
    ExtendedLiteral();
  }

  final public void Guards() throws ParseException {
    jj_consume_token(13);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
    case 17:
    case DIGITS:
    case SMALLLETTERS:
    case BIGLETTERS:
      ExtendedLiteral();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 7:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(7);
        ExtendedLiteral();
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(14);
  }

  final public void Body() throws ParseException {
    jj_consume_token(13);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
    case 17:
    case DIGITS:
    case SMALLLETTERS:
    case BIGLETTERS:
      ExtendedLiteral();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 7:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        jj_consume_token(7);
        ExtendedLiteral();
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(14);
  }

  final public void ExtendedLiteral() throws ParseException {
    Literal();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
      Issuer();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      jj_consume_token(16);
      Requester();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  final public void Issuer() throws ParseException {
    String();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
      Issuer();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

  final public void Requester() throws ParseException {
    String();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      jj_consume_token(16);
      Requester();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

  final public void Literal() throws ParseException {
    ListOfStrings();
    jj_consume_token(6);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
    case 17:
    case DIGITS:
    case SMALLLETTERS:
    case BIGLETTERS:
      ListOfStrings();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 7:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      jj_consume_token(7);
      ListOfStrings();
    }
    jj_consume_token(8);
  }

  final public void ListOfStrings() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
    case DIGITS:
    case SMALLLETTERS:
    case BIGLETTERS:
      String();
      break;
    case 13:
      jj_consume_token(13);
      String();
      jj_consume_token(7);
      ListOfStrings();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 7:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        jj_consume_token(7);
        ListOfStrings();
      }
      jj_consume_token(14);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void String() throws ParseException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGITS:
        jj_consume_token(DIGITS);
        break;
      case SMALLLETTERS:
        jj_consume_token(SMALLLETTERS);
        break;
      case BIGLETTERS:
        jj_consume_token(BIGLETTERS);
        break;
      case 17:
        jj_consume_token(17);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
      case DIGITS:
      case SMALLLETTERS:
      case BIGLETTERS:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
    }
  }

  public PrologGrammarTokenManager token_source;
  SimpleCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[16];
  static private int[] jj_la1_0;
  static {
      jj_la1_0();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x1420,0x1420,0x80,0x1e2000,0x80,0x1e2000,0x8000,0x10000,0x8000,0x10000,0x1e2000,0x80,0x80,0x1e2000,0x1e0000,0x1e0000,};
   }

  public PrologGrammar(java.io.InputStream stream) {
     this(stream, null);
  }
  public PrologGrammar(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PrologGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public PrologGrammar(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new PrologGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public PrologGrammar(PrologGrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public void ReInit(PrologGrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.Vector jj_expentries = new java.util.Vector();
  private int[] jj_expentry;
  private int jj_kind = -1;

  public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[21];
    for (int i = 0; i < 21; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 16; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 21; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  final public void enable_tracing() {
  }

  final public void disable_tracing() {
  }

}
